--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "react-dom": "^0.14.6",
     "sqlite": "^2.2.0",
     "webpack": "^1.12.9",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "^1.14.1",
+    "react-hot-loader": "^1.3.0"
   },
   "devDependencies": {},
   "scripts": {
-    "dev": "webpack-dev-server --content-base src --inline --hot",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "./node_modules/.bin/webpack-dev-server --content-base src --inline --hot",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "webpack" : "webpack"
   },
   "author": "",
   "license": "ISC",
