--- a/package.json
+++ b/package.json
@@ -11,18 +11,19 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
+    "body-parser": "^1.15.2",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
+    "react-hot-loader": "^1.3.0",
     "sqlite": "^2.2.0",
     "webpack": "^1.12.9",
-    "webpack-dev-server": "^1.14.1",
-    "react-hot-loader": "^1.3.0"
+    "webpack-dev-server": "^1.14.1"
   },
   "devDependencies": {},
   "scripts": {
     "dev": "./node_modules/.bin/webpack-dev-server --content-base src --inline --hot",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "webpack" : "webpack"
+    "webpack": "webpack"
   },
   "author": "",
   "license": "ISC",
